# ear_model

./: .gitignore  CMakeLists.txt  README.md  carfac_reader.h  carfac_train.cpp  helpers.h  midi_gen.cpp  mnist_train.cpp  note_model.h  notes_train.cpp  playback.cpp  spectro.cpp  wav_to_midi.cpp
carfac/: CMakeLists.txt
carfac/include/carfac/: pitchogram_pipeline.h
carfac/src/: pitchogram_pipeline.cc
midifile/: CMakeLists.txt
src/: app.cpp  main_old.cpp  midi_cvt.cpp  midi_gen.cpp  midi_read.cpp  notes_train.cpp  playback.cpp  spectro.cpp  tbt_train.cpp  wav_to_midi.cpp
src/include/: accuracy_score.h  carfac_reader.h  helpers.h  midi_note.h  midi_to_wav.h  named_models.h  note_location.h  note_model.h  region_split.h  tbt_model.h  vector_buf.h  voting.h  wav_reader.h  wav_to_midi.h
web/: app.html  app_single.html  audio_test.html
